# cargo-profiler

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cachegrind.out  cachegrind.out.21563  cachegrind.out.21569  cachegrind.out.21574  cachegrind.out.31186  cachegrind.out.6990  cachegrind.out.9677  cachegrind.txt  callgrind.out  callgrind.out.19118  callgrind.out.5954  callgrind.out.5958  stdout.txt  test.txt
.github/: dependabot.yml
profiler/: cachegrind.rs  callgrind.rs  mod.rs
src/: argparse.rs  args.rs  cargo.rs  display.rs  err.rs  lib.rs  lib.rs.bk  main.rs  main.rs.bk  parse.rs  profiler.rs
src/parse/: cachegrind.rs  callgrind.rs
