[package]
name = "cargo-profiler"
version = "1.1.0"
authors = ["pegasos1", "Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "Cargo subcommand to profile your applications."
homepage = "http://github.com/svenstaro/cargo-profiler"
repository = "http://github.com/svenstaro/cargo-profiler"
license = "MIT"
keywords = ["cargo", "profiler", "subcommand", "valgrind", "performance"]
edition = "2018"

[dependencies]
clap = "2.5.1"
regex = "1"
ndarray = "0.13"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
anyhow = "1"
strum = "0.16"
strum_macros = "0.16"
