[package]
name = "cargo-profiler"
version = "0.2.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "Cargo subcommand to profile your applications."
homepage = "http://github.com/svenstaro/cargo-profiler"
repository = "http://github.com/svenstaro/cargo-profiler"
license = "MIT"
keywords = ["cargo", "profiler", "subcommand", "perf", "performance"]
edition = "2018"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
]

[dependencies]
structopt = "0.3"
anyhow = "1.0"
escargot = "0.5"
